fix: max 5 nightshift per month

--- a/src/components/ShiftsTally/ShiftTally.css
+++ b/src/components/ShiftsTally/ShiftTally.css
@@ -32,6 +32,7 @@
 .shifts-tally table td {
   border: 1px solid #4a5568;
   font-weight: normal;
+  padding: 3px;
 }
 
 .shifts-tally table small {
@@ -41,5 +42,5 @@
 
 .shifts-tally table td:first-child,
 .shifts-tally table td:last-child {
-  text-align: left;
+  /* text-align: left; */
 }
